libexcept (1.1.0.0~xenial) xenial; urgency=high

  * The interface changed again so I'm bumping the minor version.
  * Added a function that gives us line numbers automatically (but is slow
    so it should only be used in specific debug and not in exceptions.)
  * Made the existing function global (still in the libexcept namespace.)

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 19 May 2019 01:21:38 -0800

libexcept (1.0.5.0~xenial) xenial; urgency=high

  * Added the documentation package to this library.
  * Fixed references to libQtCassandra (copy/paste issue.)
  * Changed the version file to use constexpr instead of static const.
  * Fixed the copyright upstream name and source link.
  * Fixed the doxygen documentation to make it more complete & detailed.
  * Made the collect_stack_trace() static again with proper docs.
  * Added the ability to specify the stack depth in all classes.
  * Fixed some variable spelling (stack_track_depth -> stack_trace_depth).

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 11 May 2019 16:40:05 -0800

libexcept (1.0.4.1~xenial) xenial; urgency=high

  * Bump version to get a recompile on launchpad.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 27 Jul 2018 00:45:54 -0800

libexcept (1.0.4.0~xenial) xenial; urgency=high

  * Made code -Weffc++ compatible.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 25 Jul 2018 19:50:25 -0800

libexcept (1.0.3.3~xenial) xenial; urgency=high

  * Bump version to recompile without the -fsanitizer flags.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 27 Jun 2018 19:46:10 -0800

libexcept (1.0.3.2~xenial) xenial; urgency=high

  * Bump version to recompile with the -fsanitizer flags.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 26 Jun 2018 20:03:27 -0800

libexcept (1.0.3.1~xenial) xenial; urgency=high

  * Fixed the protocol to the snapwebsites.org.

 -- Alexis Wilke <alexis@m2osw.com>  Thu,  8 Feb 2018 00:51:37 -0800

libexcept (1.0.3.0~xenial) xenial; urgency=high

  * Bumped copyright notice dates to 2018.